# MyDashboard

./: .gitmodules  CMakeLists.txt  TestTmlDef.xml  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc  test.xml
app/Gui/PropertyWidgets/: ITrivialPropertyWidget.h  NodePropTest.cpp  NodePropTest.h  TrivialBoolPropertyWidget.h  TrivialDoublePropertyWidget.h  TrivialFloatPropertyWidget.h  TrivialIntPropertyWidget.h  TrivialQDatePropertyWidget.h  TrivialQDateTimePropertyWidget.h  TrivialQTimePropertyWidget.h  TrivialStringPropertyWidget.h
app/Gui/SceneWidgets/: ITrivialSceneWidget.h  TrivialSceneNodeAudioWidget.h  TrivialSceneNodeHeading1Widget.h  TrivialSceneNodeHeading2Widget.h  TrivialSceneNodeHeading3Widget.h  TrivialSceneNodeImageWidget.h  TrivialSceneNodeLinkWidget.h  TrivialSceneNodeTextWidget.h  TrivialSceneNodeVideoWidget.h
app/Gui/Views/: TrivialDirExplorer.cpp  TrivialDirExplorer.h  TrivialDocumentsView.cpp  TrivialDocumentsView.h  TrivialGraphicsItem.cpp  TrivialGraphicsItem.h  TrivialGraphicsView.cpp  TrivialGraphicsView.h  TrivialGuiItems.h  TrivialLogView.cpp  TrivialLogView.h  TrivialMainView.cpp  TrivialMainView.h  TrivialMainWindow.cpp  TrivialMainWindow.h  TrivialObjectTreePropView.cpp  TrivialObjectTreePropView.h  TrivialSceneTreeView.cpp  TrivialSceneTreeView.h  TrivialSceneView.cpp  TrivialSceneView.h  TrivialScriptView.cpp  TrivialScriptView.h  TrivialSignalSlotView.cpp  TrivialSignalSlotView.h  TrivialTextDocument.cpp  TrivialTextDocument.h  TrivialTextEditor.cpp  TrivialTextEditor.h  TrivialTextItem.cpp  TrivialTextItem.h
app/Gui/Widgets/: TrivialAudioPlayerWidget.cpp  TrivialAudioPlayerWidget.h  TrivialCommonNodesWidget.cpp  TrivialCommonNodesWidget.h  TrivialNewNodeWidget.h  TrivialQObjectPropertyWidget.cpp  TrivialQObjectPropertyWidget.h  TrivialSceneTreeWidget.cpp  TrivialSceneTreeWidget.h  TrivialSceneWidget.cpp  TrivialSceneWidget.h  TrivialVideoPlayerWidget.cpp  TrivialVideoPlayerWidget.h
app/Gui/Windows/: TrivialMainWindow.cpp  TrivialMainWindow.h  TrivialMiniWindow.h  TrivialNewNodeWindow.h  TrivialQObjectPropertyWindow.h
app/Nodes/: NodeBase.cpp  NodeBase.h  NodeInclude.cpp  NodeInclude.h  NodePanel.cpp  NodePanel.h  NodeVar.cpp  NodeVar.h
app/Nodes/Basic/: NodeHeading1.cpp  NodeHeading1.h  NodeHeading2.cpp  NodeHeading2.h  NodeHeading3.cpp  NodeHeading3.h  NodeLink.cpp  NodeLink.h  NodeText.cpp  NodeText.h
app/Nodes/Document/: NodeDocumentFileType.cpp  NodeDocumentFileType.h
app/Nodes/Media/: NodeAudio.cpp  NodeAudio.h  NodeImage.cpp  NodeImage.h  NodeVideo.cpp  NodeVideo.h
app/Nodes/Pim/: NodeEvent.cpp  NodeEvent.h  NodePerson.cpp  NodePerson.h  NodeProject.cpp  NodeProject.h  NodeTask.cpp  NodeTask.h
app/Nodes/TmlDef/: NodeTmlDef.cpp  NodeTmlDef.h  NodeTmlNodeDef.cpp  NodeTmlNodeDef.h
app/Nodes/UI/: NodeQLabel.cpp  NodeQLabel.h  NodeQPushButton.cpp  NodeQPushButton.h  NodeQTextEdit.cpp  NodeQTextEdit.h  NodeQWidget.cpp  NodeQWidget.h  NodeQWindow.cpp  NodeQWindow.h  NodeUi.cpp  NodeUi.h
app/Utils/: Calendar.cpp  Calendar.h  Gui.cpp  Gui.h  Log.cpp  Log.h  SceneUtils.cpp  SceneUtils.h  Script.cpp  Script.h  TypeDef.cpp  TypeDef.h  Workspace.cpp  Workspace.h
app/Utils/GitHubRepoSync/: GitHubRepoSync.h
coreqt/Common/: Tml.cpp  Tml.h  TmlDef.cpp  TmlDef.h  TmlPreprocessor.cpp  TmlPreprocessor.h
coreqt/Utils/: QStringUtils.cpp  QStringUtils.h  Singleton.h  Tags.h
research/OSMTile/OSMTile/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
research/QTextEditor/QTextEditor/: CMakeLists.txt  InputTextEdit.cpp  InputTextEdit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
research/QueryGui/QueryGui/: CMakeLists.txt  TrivialQueryWidget.cpp  TrivialQueryWidget.h  mainwindow.cpp  mainwindow.h  untitled.ui
research/TrivialCppParser/TrivialCppParser/: CMakeLists.txt  TrivialCppParser.cpp  TrivialCppParser.h  main.cpp
ui/forms/: MainMenuMidi.ui  MainMenuMini.ui  NewNode.ui  SceneItmeWidget.ui  SceneViewComplex.ui
